[REFACTOR] Fix Code Smells from Announcement Feature